--- a/blog.html
+++ b/blog.html
@@ -39,7 +39,7 @@
 				<nav class="limiter-menu-desktop p-l-45">
 					
 					<!-- Logo desktop -->		
-					<a href="index.html" class="logo">
+					<a href="index.php" class="logo">
 						<img src="images/icons/logo-01.jpg" alt="IMG-LOGO" class="img-fluid" style="max-width: 100px;">
 					</a>
 
@@ -49,7 +49,7 @@
 							<div class="col-auto">
 								<ul class="main-menu" style="list-style: none; padding: 0; display: flex;">
 									<li style="margin: 0 10px;">
-										<a href="index.html">Shop</a>
+										<a href="index.php">Shop</a>
 									</li>
 									<li style="margin: 0 10px;">
 										<a href="blog.html">Blog</a>
@@ -88,7 +88,7 @@
 		<div class="wrap-header-mobile">
 			<!-- Logo moblie -->		
 			<div class="logo-mobile">
-				<a href="index.html"><img src="images/icons/logo-01.png" alt="IMG-LOGO"></a>
+				<a href="index.php"><img src="images/icons/logo-01.png" alt="IMG-LOGO"></a>
 			</div>
 
 			<!-- Icon header -->
@@ -110,7 +110,7 @@
 		<div class="wrap-header-mobile">
 			<!-- Logo moblie -->		
 			<div class="logo-mobile">
-				<a href="index.html"><img src="images/icons/logo-01.png" alt="IMG-LOGO"></a>
+				<a href="index.php"><img src="images/icons/logo-01.png" alt="IMG-LOGO"></a>
 			</div>
 
 			<!-- Icon header -->
@@ -169,9 +169,9 @@
 
 			<ul class="main-menu-m">
 				<li>
-					<a href="index.html">Home</a>
+					<a href="index.php">Home</a>
 					<ul class="sub-menu-m">
-						<li><a href="index.html">Homepage 1</a></li>
+						<li><a href="index.php">Homepage 1</a></li>
 						<li><a href="home-02.html">Homepage 2</a></li>
 						<li><a href="home-03.html">Homepage 3</a></li>
 					</ul>
