--- a/about.html
+++ b/about.html
@@ -109,11 +109,11 @@
                 </li>
 
                 <li class="label1" data-label1="hot">
-                  <a href="shoping-cart.html">Features</a>
+                  <a href="shopping-cart.php">Features</a>
                 </li>
 
                 <li>
-                  <a href="blog.html">Blog</a>
+                  <a href="blog.php">Blog</a>
                 </li>
 
                 <li class="active-menu">
@@ -234,13 +234,13 @@
           </li>
 
           <li>
-            <a href="shoping-cart.html" class="label1 rs1" data-label1="hot"
+            <a href="shopping-cart.php" class="label1 rs1" data-label1="hot"
               >Features</a
             >
           </li>
 
           <li>
-            <a href="blog.html">Blog</a>
+            <a href="blog.php">Blog</a>
           </li>
 
           <li>
@@ -351,14 +351,14 @@
 
             <div class="header-cart-buttons flex-w w-full">
               <a
-                href="shoping-cart.html"
+                href="shopping-cart.php"
                 class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-r-8 m-b-10"
               >
                 View Cart
               </a>
 
               <a
-                href="shoping-cart.html"
+                href="shopping-cart.php"
                 class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10"
               >
                 Check Out
